# Video_analytics_services

./: .gitattributes  README.md
VAService/: CMakeLists.txt  Dockerfile
VAService/inc/: Common.hpp  InferenceEngine.hpp  Logger.hpp  VideoCapture.hpp
VAService/src/: InferenceEngine.cpp  VideoCapture.cpp  main.cpp
restservice/: CMakeLists.txt  Dockerfile  build.sh  nginx.conf  run.sh
restservice/inc/: Common.hpp  Logger.hpp  RestService.h  RestService.hpp  common.h  logger.h
restservice/src/: Logger.cpp  RestService.cpp  main.cpp
streamingservice/: Dockerfile  build.sh  mediamtx.yml  run.sh
videoservice/: Dockerfile  Makefile  build.sh  rm_exited.sh  run.sh
videoservice/config/: config.json
videoservice/inc/: VideoService.h  common.h  logger.h
videoservice/src/: VideoService.cpp  logger.cpp
